# aig

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/aig/: __init__.py  ai.py  anthropic.py  git.py  google.py  openai.py
src/gai/: __init__.py
tests/: test_ai.py  test_anthropic.py  test_cli_integration_gemini.py  test_coverage_completion.py  test_edge_cases_comprehensive.py  test_git.py  test_google.py  test_init.py  test_init_extended.py  test_main.py  test_openai.py
