[project]
name = "gai"
version = "0.1.0"
description = "AI‑enhanced git wrapper"
authors = [
    { name = "Ashkon Farhangi", email = "ashkon.f@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "pytest",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "pyright>=1.1.403",
]

[project.scripts]
gai = "main:main"

