[project]
name = "aig"
version = "0.1.0"
description = "AI‑enhanced git wrapper"
authors = [
    { name = "Ashkon Farhangi", email = "ashkon.f@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "openai",
    "anthropic",
    "pytest-mock>=3.14.1",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "argcomplete>=3.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-dotenv",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "pyright>=1.1.403",
]

[project.scripts]
aig = "aig:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "integration: marks tests as integration (deselect with -m 'not integration')",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["src/aig/__main__.py"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
